# master-crewai

./: README.md
agent_ai/: README.md  pyproject.toml  report.md  report2.md
agent_ai/src/agent_ai/: crew.py  main.py
agent_ai/src/agent_ai/config/: agents.yaml  tasks.yaml
