[project]
name = "agent_ai"
version = "0.1.0"
description = "agent-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
agent_ai = "agent_ai.main:run"
run_crew = "agent_ai.main:run"
train = "agent_ai.main:train"
replay = "agent_ai.main:replay"
test = "agent_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
